@@ -3,6 +3,9 @@ NEWS - OpenPrinting CUPS Filters v1.0.71 - 2015-07-02
 
 CHANGES IN V1.0.72
 
+	- cups-browsed: Added protection against accidental deletion of
+	  print queues generated by cups-browsed. These queues now get
+	  automatically re-created.
 	- cups-browsed: Added LDAP support. Appropriately configured via
 	  cups-browsed.conf remote printers made available via LDAP will be
 	  looked up and local queues pointing to them created. Thanks to
